--- a/gitlab/roles/gitlab/templates/database.yml.j2
+++ b/gitlab/roles/gitlab/templates/database.yml.j2
@@ -4,7 +4,7 @@ production:
   reconnect: false
   database: gitlabhq_production
   pool: 10
-  username: gitlab
-  password: gitlab
-  host: 127.0.0.1
+  username: {{ gitlab_db_user }}
+  password: {{ gitlab_db_password }}
+  host: {{ gitlab_db_host }}
   # socket: /tmp/mysql.sock
